Changing path of resource csv file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ server.port=8081
 
 spring.batch.job.enabled=false
 
-input=file:users.csv
+input=file:/home/mjy07/Documents/Eclipse_Workspace/BatchApplication/src/main/resources/users.csv
